packages/tree-sitter/tdr-md/test/corpus/block_quotes/basic.txt
================
Block quote
================

> Hello

---

(document
  (section
    (block_quote
      (block_quote_marker)
      (paragraph
        (inline)))))

================
Block quote with multiple lines
================

> Line one
> Line two

---

(document
  (section
    (block_quote
      (block_quote_marker)
      (paragraph
        (inline))
      (paragraph
        (inline)))))
