packages/tree-sitter/tdr-md/test/corpus/callouts/basic.txt
================
Callout block with type
================

::: note
Hello
:::

---

(document
  (section
    (callout_block
      (callout_block_delimiter)
      type: (callout_type)
      (paragraph
        (inline))
      (callout_block_delimiter))))

================
Callout block without type
================

:::
Hello
:::

---

(document
  (section
    (callout_block
      (callout_block_delimiter)
      (paragraph
        (inline))
      (callout_block_delimiter))))

================
Footnote block
================

::: footnote
ref1: Some text
:::

---

(document
  (section
    (callout_block
      (callout_block_delimiter)
      type: (callout_type)
      (paragraph
        (inline))
      (callout_block_delimiter))))

================
Warning callout
================

::: warning
Be careful.
:::

---

(document
  (section
    (callout_block
      (callout_block_delimiter)
      type: (callout_type)
      (paragraph
        (inline))
      (callout_block_delimiter))))
