packages/tree-sitter/tdr-md/test/corpus/callouts/nested.txt
================
Callout containing a list
================

::: note
- item one
- item two
:::

---

(document
  (section
    (callout_block
      (callout_block_delimiter)
      type: (callout_type)
      (list
        (list_item
          (list_marker_minus)
          (paragraph
            (inline)))
        (list_item
          (list_marker_minus)
          (paragraph
            (inline))))
      (callout_block_delimiter))))
