packages/tree-sitter/tdr-md/test/corpus/lists/mixed_markers.txt
================
Mixed markers produce separate lists
================

- bullet one
- bullet two
1. ordered one
2. ordered two

---

(document
  (section
    (list
      (list_item
        (list_marker_minus)
        (paragraph
          (inline)))
      (list_item
        (list_marker_minus)
        (paragraph
          (inline))))
    (list
      (list_item
        (list_marker_dot)
        (paragraph
          (inline)))
      (list_item
        (list_marker_dot)
        (paragraph
          (inline))))))

================
Star then minus produces two lists
================

* star
- minus

---

(document
  (section
    (list
      (list_item
        (list_marker_star)
        (paragraph
          (inline))))
    (list
      (list_item
        (list_marker_minus)
        (paragraph
          (inline))))))
