packages/tree-sitter/tdr-md/test/corpus/lists/ordered_multidigit.txt
================
Multi-digit ordered list
================

10. tenth
11. eleventh

---

(document
  (section
    (list
      (list_item
        (list_marker_dot)
        (paragraph
          (inline)))
      (list_item
        (list_marker_dot)
        (paragraph
          (inline))))))
