packages/tree-sitter/tdr-md/test/corpus/math_blocks/basic.txt
================
Math block
================

$$
x = 1
$$

---

(document
  (section
    (math_block
      (math_block_delimiter)
      (math_block_content)
      (math_block_delimiter))))

================
Empty math block
================

$$
$$

---

(document
  (section
    (math_block
      (math_block_delimiter)
      (math_block_delimiter))))
