packages/tree-sitter/tdr-md/test/corpus/sections/implicit.txt
================
Implicit section for bare paragraph
================

Just text

---

(document
  (section
    (paragraph
      (inline))))

================
Implicit section with multiple blocks
================

Paragraph one

> A quote

---

(document
  (section
    (paragraph
      (inline))
    (block_quote
      (block_quote_marker)
      (paragraph
        (inline)))))

================
Implicit section then heading section
================

Before heading

# Title

After heading

---

(document
  (section
    (paragraph
      (inline)))
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (paragraph
      (inline))))
