packages/tree-sitter/tdr-md/test/corpus/sections/mixed_blocks.txt
================
Section with mixed block types
================

# Title

Paragraph here

```python
code
```

- item

---

(document
  (section
    (atx_heading
      (atx_h1_marker)
      heading_content: (inline))
    (paragraph
      (inline))
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))
    (list
      (list_item
        (list_marker_minus)
        (paragraph
          (inline))))))
