packages/tree-sitter/tdr-md/test/corpus/tables/basic.txt
================
Pipe table
================

| Name | Age |
| ---- | --- |
| Alice | 30 |

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell)
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)
        (pipe_table_cell)))))

================
Pipe table with multiple rows
================

| A | B |
| - | - |
| 1 | 2 |
| 3 | 4 |

---

(document
  (section
    (pipe_table
      (pipe_table_header
        (pipe_table_cell)
        (pipe_table_cell))
      (pipe_table_delimiter_row)
      (pipe_table_row
        (pipe_table_cell)
        (pipe_table_cell))
      (pipe_table_row
        (pipe_table_cell)
        (pipe_table_cell)))))
